# MeshProcPGE

./: .gitignore  CMakeLists.txt
olc/: CMakeLists.txt  olcPixelGameEngine.h
src/: CMakeLists.txt  engine.h  engine.hpp  main.cpp  utilities.hpp
src/mesh/: CMakeLists.txt  base_mesh.hpp  convert.hpp  generate_plane.hpp  handlers.h  mesh.hpp  ngon_mesh.hpp  tri_mesh.hpp  triangulate.hpp  utilities.hpp
src/mesh/he/: CMakeLists.txt  edge_flip.hpp  he_mesh.hpp  path_find.hpp  remeshing.hpp  simplification.hpp  smoothing.hpp  subdivision.hpp  utilities.hpp
src/point_cloud/: CMakeLists.txt  handlers.h  point_vec.hpp
src/vertex/: CMakeLists.txt  vertex.h
